# synodia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  generate_win.py
anvil/: CMakeLists.txt  CmakeLists.txt  sources.cmake
anvil/app/: CMakeLists.txt  main.cpp
anvil/include/: anvil.h  application.h  audio_manager.h  configuration.h  fontloader.h  game_state_machine.h  gameobject.h  gamestate.h  ini_settings_accessor.h  inputhandler.h  isogameobject.h  json_serializer.h  logger.h  menubutton.h  menustate.h  nonplayable.h  observer.h  pausestate.h  player.h  playstate.h  renderer.h  scene.h  settings_accessor.h  test.h  textlabel.h  texturemanager.h  tilemap.h  utils.h  vector2d.h  window.h
anvil/include/AnvilImgui/: ImguiSystem.h  MenuBar.h
anvil/include/components/: Collision2DComponent.h  Sprite2DComponent.h  Transform2DComponent.h  TransformComponent.h
anvil/include/game_objects/: BaseGameObject.h  GameObjectsFactory.h  IGameObject.h  gameobject.h  isogameobject.h  textlabel.h  tilemap.h
anvil/include/json_serializer/: game_object_serializer.h  json_serializer.h  menu_state_serializer.h  serializable_base.h  stateloader.h
anvil/include/ui/: scrollable_text.h
anvil/lib/: CMakeLists.txt  test.h
anvil/src/: AppSettings.hpp  CMakeLists.txt  GameObjectObserver.cpp  GameObjectObserver.h  anvil.h  application.cpp  application.h  audio_manager.cpp  configuration.cpp  configuration.h  fontloader.cpp  fontloader.h  game_state_machine.cpp  game_state_machine.h  gamestate.h  ini_settings_accessor.cpp  ini_settings_accessor.h  inputhandler.cpp  inputhandler.h  isogameobject.cpp  json_serializer.cpp  menubutton.cpp  nonplayable.cpp  player.cpp  renderer.cpp  renderer.h  scene.cpp  settings_accessor.h  stateloader.cpp  test.cpp  test.h  textlabel.cpp  texturemanager.cpp  texturemanager.h  tilemap.cpp  utils.cpp  vector2d.h  visualNode.cpp  window.cpp  window.h
anvil/src/AnvilImgui/: EditorBar.cpp  EditorBar.h  ImguiFactory.h  ImguiSystem.cpp  ImguiSystem.h  MenuBar.cpp  MenuBar.h  SDLImguiSystem.cpp  SDLImguiSystem.h  SceneWidget.cpp  SceneWidget.h  json_utils.hpp  testWidget.cpp  testWidget.h
anvil/src/AssetStore/: AssetStore.cpp  AssetStore.h
anvil/src/Commands/: ICommand.hpp  SwitchScene.hpp
anvil/src/ECS/: ECS.cpp  ECS.h
anvil/src/EventBus/: Event.h  EventBus.h
anvil/src/Events/: ButtonEvents.h  CollisionEvent.h  KeyPressedEvent.h  MouseEvents.h  PlayerActionEvents.h
anvil/src/Logger/: Logger.cpp  Logger.h
anvil/src/Render/: IRenderer.hpp  ITexture.hpp  Renderer.cpp
anvil/src/Render/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp
anvil/src/Render/SDL/: SDL_Renderer.cpp  SDL_Renderer.hpp  SDL_Texture.cpp  SDL_Texture.hpp
anvil/src/Systems/: AnimationSystem.h  ButtonSystem.h  CameraMovementSystem.h  CollisionSystem.h  CommandSystem.h  ComposedUIRenderSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderHealthBarSystem.h  RenderImGUISystem.h  RenderSystem.h  RenderTextSystem.h  RenderTileMapSystem.h
anvil/src/components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  Collision2DComponent.h  CommandComponent.h  ComposedUIComponent.h  HealthComponent.h  IComponent.h  KeyboardControlledComponent.h  MovementIsoComponent.cpp  MovementIsoComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  Sprite2DComponent.cpp  Sprite2DComponent.h  SpriteComponent copy.h  SpriteComponent.h  TextComponent.cpp  TextComponent.h  TextLabelComponent.h  TileComponent.h  TileMapComponent.h  Transform2DComponent.cpp  Transform2DComponent.h  TransformComponent.h
anvil/src/game_objects/: GameObjectsFactory.cpp  GameObjectsFactory.h  IGameObject.h  gameobject.cpp  gameobject.h  isogameobject.cpp  isogameobject.h  textlabel.cpp  tilemap.cpp  visualNode.cpp  visualNode.h
anvil/src/json_serializer/: game_object_serializer.cpp  json_serializer.h  menu_state_serializer.cpp
anvil/src/states/: ILoadable.hpp  LoadingState.cpp  LoadingState.h  editstate.cpp  editstate.h  game_state_machine.cpp  game_state_machine.h  gamestate.cpp  gamestate.h  losestate.cpp  losestate.h  menustate.cpp  menustate.h  pausestate.cpp  pausestate.h  playstate.cpp  playstate.h  stateLoader.cpp  stateLoader.hpp  winstate.cpp  winstate.h
anvil/src/ui/: scrollable_text.cpp  scrollable_text.h
anvil/tests/: CMakeLists.txt  isogameobject_test.cpp  serializer_test.cpp
apps/: CMakeLists.txt
apps/editor/: CMakeLists.txt  main.cpp  settings.ini
apps/editor/states/: mainstate.cpp  mainstate.h
apps/synodiaGame/: CMakeLists.txt  main.cpp  settings.ini
apps/synodiaGame/assets/objects/: lady_textures.json  lady_textures_full.json  menu.json  menu_textures.json  play.json  play_resources.json  tilemap.json  tileset.json
apps/synodiaGame/assets/tilemaps/: all.tsx  generate_map.py  map_0.tmx  neuromap_0.tmx
apps/synodiaGame/tilemaps/: map_0.tiled-session
apps/test_app/: CMakeLists.txt  main.cpp  nonplayable.cpp  nonplayable.h  player.cpp  player.h  settings.ini
apps/test_app/assets/: lose.json  objects_templates.json  play.json  speech.xcf  tale.txt
apps/test_app/assets/objects/: GUIHolder.json  audio.json  lose.json  menu.json  objects_templates.json  pause.json  play.json  textures.json  win.json
apps/test_app/gameobjects/: gamescene.cpp  gamescene.h  nonplayable.cpp  nonplayable.h  player.cpp  player.h  speech.cpp  speech.h  stationary.cpp  stationary.h
apps/test_app/gui/: menubutton.cpp  menubutton.h  progressBar.cpp  progressBar.h  textbutton.cpp  textbutton.h
apps/test_app/res/: empty_button.xcf  menu.json  objects_templates.json  pause.json  play.json  win.json  world.json
apps/test_app/res/objects/: scrollable_text.json
apps/test_app/states/: losestate.cpp  losestate.h  menustate.cpp  menustate.h  pausestate.cpp  pausestate.h  playstate.cpp  playstate.h  winstate.cpp  winstate.h
cmake/: Deploy.cmake  (+2 more)
src/anvil/: CMakeLists.txt  test.cpp  window.cpp  window.h
(+8 files in other folders)
