cmake_minimum_required(VERSION 3.5)
project(synodia)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

set(ANVIL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ANVIL_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ANVIL_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ANVIL_BIN_DIR})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ANVIL_BIN_DIR}/${OUTPUT_DEBUG})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${ANVIL_BIN_DIR}/${OUTPUT_DEBUG})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ANVIL_BIN_DIR}/${OUTPUT_DEBUG})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ANVIL_BIN_DIR}/${OUTPUT_REL})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ANVIL_BIN_DIR}/${OUTPUT_REL})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${ANVIL_BIN_DIR}/${OUTPUT_REL})

set(CMAKE_INSTALL_NAME_DIR ${CMAKE_INSTALL_FULL_LIBDIR})
set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR})
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)


set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(BUILD_SHARED_LIBS ON CACHE BOOL "Link to libs dynamically")

message("cxx flags:" ${CMAKE_CXX_FLAGS})

add_subdirectory(anvil)
add_subdirectory(apps)

